Getting data in - now link up components and style

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,12 @@
 <div id="main-container">
   <h1>Banner Viewer</h1>
+  <section *ngIf="bannerSets.length>0">
+    <div *ngFor="let bannerSet of bannerSets">
+      {{bannerSet}}
+    </div>
+  </section>
 </div>
 
-<section>
-  {{bannerLinks}}
-</section>
+
+
+ 
