Pass props down to banner set container and banner set, which contains controls and banner component

--- a/src/app/components/banner-set-container/banner-set-container.component.html
+++ b/src/app/components/banner-set-container/banner-set-container.component.html
@@ -1,3 +1,9 @@
-<p>
-  banner-set-container works!
-</p>
+<section class="banner-section">
+  <h2>{{bannerSet.title}}</h2>
+  <section *ngIf="sizes.length>0"  class="banner-set">
+    <section *ngFor="let size of sizes">
+      <app-banner-set [size]="size"></app-banner-set>
+    </section>
+  </section>
+</section>
+
