--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <h1>Banner Viewer</h1>
   <section *ngIf="bannerSets.length>0">
     <div *ngFor="let bannerSet of bannerSets">
-      {{bannerSet}}
+      <app-banner-set-container [bannerSet]="bannerSet"></app-banner-set-container>
     </div>
   </section>
 </div>
