Add checkbox for each banner

--- a/src/app/components/banner-set/banner-set.component.html
+++ b/src/app/components/banner-set/banner-set.component.html
@@ -1,1 +1,5 @@
-<h4>{{size}}</h4>
+<h4 style="display:inline-block;">{{size}}</h4>
+<div class="show-hide-control">
+  <input class="showHideBtn" type="checkbox">
+  <span>Show/Hide</span>
+</div>
