--- a/src/app/components/banner-set-container/banner-set-container.component.html
+++ b/src/app/components/banner-set-container/banner-set-container.component.html
@@ -1,8 +1,8 @@
 <section class="banner-section">
   <h2>{{bannerSet.title}}</h2>
   <section *ngIf="sizes.length>0"  class="banner-set">
-    <section *ngFor="let size of sizes">
-      <app-banner-set [size]="size"></app-banner-set>
+    <section *ngFor="let size of sizes; let i=index">
+      <app-banner-set [size]="size" [url]="urls[i]" [id]="ids[i]"></app-banner-set>
     </section>
   </section>
 </section>
