Add refresh and fix show/toggle button.

--- a/src/app/components/banner-set/banner-set.component.html
+++ b/src/app/components/banner-set/banner-set.component.html
@@ -3,4 +3,6 @@
   <input class="showHideBtn" type="checkbox" (click)="showHideToggle($event,id);">
   <span>Show/Hide</span>
 </div>
-<app-banner [url]="url" [width]="width" [height]="height" [id]="id"></app-banner>
+<button (click)="refreshIframe($event,id)">Refresh</button>
+<br>
+<app-banner [url]="url" [width]="width" [height]="height" id="{{id}}"></app-banner>
