--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -1,1 +1,1 @@
-<iframe width="{{width}}" height="{{height}}" [src]="safeUrl"></iframe>
+<iframe width="{{width}}" height="{{height}}" [src]="safeUrl" id="{{id}}-frame"></iframe>
