--- a/src/app/components/banner-set-container/banner-set-container.component.css
+++ b/src/app/components/banner-set-container/banner-set-container.component.css
@@ -5,8 +5,9 @@
     margin-bottom:1em;
     min-height:600px;
     width:90%;
+    padding-bottom:2em;
 }
 .banner-set{
     display:grid;
-    grid-template-columns: repeat(5,1fr);
+    grid-template-columns: repeat(3,1fr);
 }
