Update stylings for better viewing and comparison

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div id="main-container">
   <h1>Banner Viewer</h1>
-  <section *ngIf="bannerSets.length>0">
+  <section *ngIf="bannerSets.length>0" id="main-section">
     <div *ngFor="let bannerSet of bannerSets">
       <app-banner-set-container [bannerSet]="bannerSet"></app-banner-set-container>
     </div>
