--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,4 +3,12 @@
     width: 100%;
     text-align: center;
 }
-
+#main-section{
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+}
+@media(max-width:1636px){
+    #main-section{
+        grid-template-columns: 1fr;
+    }
+}
