--- a/src/app/components/banner-set-container/banner-set-container.component.css
+++ b/src/app/components/banner-set-container/banner-set-container.component.css
@@ -4,10 +4,7 @@
     margin-top:1em;
     margin-bottom:1em;
     min-height:600px;
-    width:90%;
-    padding-bottom:2em;
-}
-.banner-set{
-    display:grid;
-    grid-template-columns: repeat(3,1fr);
+    width:800px;
+    padding-bottom:1em;
+    display:inline-block;
 }
