--- a/src/app/components/banner-set-container/banner-set-container.component.css
+++ b/src/app/components/banner-set-container/banner-set-container.component.css
@@ -4,8 +4,7 @@
     margin-top:1em;
     margin-bottom:1em;
     min-height:600px;
-    width:800px;
-    padding-bottom:1em;
+    padding:1em;
     display:inline-block;
 }
 .banner-set-title{
