--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,12 +1,20 @@
 #main-container{
     margin: 0 auto;
     text-align: center;
+    width:100%;
 }
 #main-section{
     display:grid;
-    grid-template-columns: 1fr 1fr;
+    width:100%;
+    grid-gap:10px;
+    grid-template-columns: repeat(3,1fr);
 }
-@media(max-width:1636px){
+@media (max-width:1887px){
+    #main-section{
+        grid-template-columns: repeat(2,1fr);
+    }
+}
+@media(max-width:1300px){
     #main-section{
         grid-template-columns: 1fr;
     }
